// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a string parameter with title and description 1`] = `
<TextParam
  handleBasicFormParamChange={[MockFunction]}
  id="foo"
  label="Username"
  param={
    Object {
      "path": "username",
      "type": "string",
      "value": "user",
    }
  }
>
  <div>
    <label
      className="centered deployment-form-label deployment-form-label-text-param"
      htmlFor="foo"
    >
      Username
    </label>
    <input
      className="clr-input deployment-form-text-input"
      id="foo"
      onChange={[Function]}
      type="text"
      value="user"
    />
  </div>
</TextParam>
`;

exports[`should render a textArea parameter with title and description 1`] = `
<TextParam
  handleBasicFormParamChange={[MockFunction]}
  id="bar"
  inputType="textarea"
  label="Configuration"
  param={
    Object {
      "path": "configuration",
      "type": "string",
      "value": "First line
Second line",
    }
  }
>
  <div>
    <label
      className="centered deployment-form-label deployment-form-label-text-param"
      htmlFor="bar"
    >
      Configuration
    </label>
    <textarea
      id="bar"
      onChange={[Function]}
      value="First line
Second line"
    />
  </div>
</TextParam>
`;
